--- a/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
+++ b/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
@@ -24,10 +24,10 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35g-Ip-Uvk">
-                                                <rect key="frame" x="0.0" y="-44" width="414" height="517.5"/>
+                                                <rect key="frame" x="0.0" y="34" width="414" height="517.5"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heroImage" translatesAutoresizingMaskIntoConstraints="NO" id="AzW-Ye-P2I">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="488"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="439.5"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="슬기로운자연생활" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bR-LH-LXt">
                                                         <rect key="frame" x="17" y="70" width="140" height="90"/>
@@ -83,7 +83,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가까운 여행지 둘러보기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lal-dM-1By" customClass="CustomTitleLabel" customModule="airbnb" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="444" width="414" height="60"/>
+                                                <rect key="frame" x="0.0" y="473.5" width="414" height="60"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="NdU-7h-J73"/>
@@ -93,7 +93,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orr-Nx-GjN">
-                                                <rect key="frame" x="0.0" y="504" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="533.5" width="414" height="200"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ZgY-1N-apa">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
@@ -130,7 +130,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어디에서나, 여행은 살아보는거야!" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QU-gr-dFt" customClass="CustomTitleLabel" customModule="airbnb" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="704" width="414" height="80"/>
+                                                <rect key="frame" x="0.0" y="733.5" width="414" height="80"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="80" id="kaB-d3-wdl"/>
@@ -140,7 +140,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ZO1-Qy-4nn">
-                                                <rect key="frame" x="0.0" y="784" width="414" height="360"/>
+                                                <rect key="frame" x="0.0" y="813.5" width="414" height="360"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="360" id="oko-zT-ZhJ"/>
@@ -173,7 +173,7 @@
                                             <constraint firstItem="ZO1-Qy-4nn" firstAttribute="top" secondItem="0QU-gr-dFt" secondAttribute="bottom" id="Ajh-nT-PWA"/>
                                             <constraint firstAttribute="trailing" secondItem="ZO1-Qy-4nn" secondAttribute="trailing" id="EGA-du-oJz"/>
                                             <constraint firstAttribute="trailing" secondItem="Lal-dM-1By" secondAttribute="trailing" id="OkU-R0-gmR"/>
-                                            <constraint firstItem="Lal-dM-1By" firstAttribute="top" relation="lessThanOrEqual" secondItem="etL-GL-HTw" secondAttribute="top" constant="473.5" id="QhP-g0-heh"/>
+                                            <constraint firstItem="Lal-dM-1By" firstAttribute="top" secondItem="etL-GL-HTw" secondAttribute="top" constant="473.5" id="QhP-g0-heh"/>
                                             <constraint firstItem="orr-Nx-GjN" firstAttribute="leading" secondItem="etL-GL-HTw" secondAttribute="leading" id="Rkr-cA-lGi"/>
                                             <constraint firstAttribute="trailing" secondItem="35g-Ip-Uvk" secondAttribute="trailing" id="Zzw-Pp-5cg"/>
                                             <constraint firstAttribute="width" constant="414" id="a8v-Rf-bEc"/>
@@ -428,8 +428,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="₩11,000 - ₩1,000,000+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Atn-4A-BS9">
-                                <rect key="frame" x="20" y="117" width="200" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Atn-4A-BS9">
+                                <rect key="frame" x="20" y="117" width="200" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="G2c-Cl-fMf"/>
                                 </constraints>
@@ -438,7 +438,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="평균 1박 요금은 ₩165,556입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lvH-qw-sCJ">
-                                <rect key="frame" x="20" y="158" width="200" height="14.5"/>
+                                <rect key="frame" x="20" y="157.5" width="200" height="14.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Y5D-QN-gKh"/>
                                 </constraints>
@@ -685,7 +685,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="g2F-1q-al5"/>
+        <segue reference="ehP-mi-aeD"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="heroImage" width="375" height="488"/>
