[#2] fix: selected 된 셀 둥글게 표시

--- a/iOS/airbnb/airbnb/Calender/View/CalendarCell.xib
+++ b/iOS/airbnb/airbnb/Calender/View/CalendarCell.xib
@@ -18,14 +18,21 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F1A-yI-Tz8">
                         <rect key="frame" x="0.0" y="0.0" width="25" height="50"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PhB-Bc-sc9">
                         <rect key="frame" x="25" y="0.0" width="25" height="50"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H9t-ro-rmu">
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90K-Oa-hAU">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,6 +44,7 @@
             <constraints>
                 <constraint firstAttribute="top" secondItem="PhB-Bc-sc9" secondAttribute="top" id="9wf-Hi-udq"/>
                 <constraint firstAttribute="centerX" secondItem="PhB-Bc-sc9" secondAttribute="leading" id="F3m-vu-V5E"/>
+                <constraint firstAttribute="top" secondItem="H9t-ro-rmu" secondAttribute="top" id="LH9-gm-SZg"/>
                 <constraint firstItem="PhB-Bc-sc9" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="Vqp-hz-RFo"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="90K-Oa-hAU" secondAttribute="trailing" id="WEU-U7-Cen"/>
                 <constraint firstItem="PhB-Bc-sc9" firstAttribute="bottom" secondItem="gTV-IL-0wX" secondAttribute="bottom" id="WSY-3t-NlB"/>
@@ -44,11 +52,15 @@
                 <constraint firstAttribute="top" secondItem="F1A-yI-Tz8" secondAttribute="top" id="gaj-un-7MR"/>
                 <constraint firstAttribute="leading" secondItem="F1A-yI-Tz8" secondAttribute="leading" id="jQL-ec-DEg"/>
                 <constraint firstItem="F1A-yI-Tz8" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="saH-m6-T4Q"/>
+                <constraint firstItem="H9t-ro-rmu" firstAttribute="bottom" secondItem="ZTg-uK-7eu" secondAttribute="bottom" id="uyC-qp-MZT"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="leading" secondItem="H9t-ro-rmu" secondAttribute="leading" id="vwX-oF-SSE"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="90K-Oa-hAU" secondAttribute="bottom" id="x8K-Gl-1xK"/>
+                <constraint firstItem="H9t-ro-rmu" firstAttribute="trailing" secondItem="ZTg-uK-7eu" secondAttribute="trailing" id="xAg-HS-H0W"/>
                 <constraint firstItem="90K-Oa-hAU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xWp-TT-ZNE"/>
                 <constraint firstItem="90K-Oa-hAU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="yDG-JK-Nf4"/>
             </constraints>
             <connections>
+                <outlet property="circleBackgroundView" destination="H9t-ro-rmu" id="HVq-mn-Bmm"/>
                 <outlet property="dayLabel" destination="90K-Oa-hAU" id="2yN-JA-tY5"/>
                 <outlet property="leftHalfView" destination="F1A-yI-Tz8" id="3Hq-V0-sqd"/>
                 <outlet property="rightHalfView" destination="PhB-Bc-sc9" id="Fie-0R-zKE"/>
