--- a/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
+++ b/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                                             <constraint firstAttribute="width" constant="140" id="2mn-pQ-dMX"/>
                                                             <constraint firstAttribute="height" constant="35" id="VKu-mz-7CC"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                         <state key="normal" title="지금 여행 떠나기">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
